--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "bootstrap": "3.3.7",
         "copy-webpack-plugin": "^4.0.1",
         "core-js": "^2.4.1",
+        "ng2-bootstrap-modal": "^1.0.1",
         "rxjs": "^5.0.1",
         "zone.js": "^0.7.4"
     },
