--- a/package.json
+++ b/package.json
@@ -20,20 +20,22 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "@angular/common": "~2.4.0",
-        "@angular/compiler": "~2.4.0",
-        "@angular/core": "~2.4.0",
-        "@angular/forms": "~2.4.0",
-        "@angular/http": "~2.4.0",
-        "@angular/platform-browser": "~2.4.0",
-        "@angular/platform-browser-dynamic": "~2.4.0",
-        "@angular/router": "~3.4.0",
+        "@angular/animations": "^4.0.0",
+        "@angular/common": "^4.0.0",
+        "@angular/compiler": "^4.0.0",
+        "@angular/core": "^4.0.0",
+        "@angular/forms": "^4.0.0",
+        "@angular/http": "^4.0.0",
+        "@angular/platform-browser": "^4.0.0",
+        "@angular/platform-browser-dynamic": "^4.0.0",
+        "@angular/router": "^4.0.0",
         "bootstrap": "3.3.7",
         "copy-webpack-plugin": "^4.0.1",
         "core-js": "^2.4.1",
         "ng2-bootstrap-modal": "^1.0.1",
-        "rxjs": "^5.0.1",
-        "zone.js": "^0.7.4"
+        "primeng": "^4.1.0",
+        "rxjs": "^5.2.0",
+        "zone.js": "^0.8.5"
     },
     "devDependencies": {
         "angular2-template-loader": "0.6.0",
@@ -45,7 +47,7 @@
         "style-loader": "0.13.1",
         "raw-loader": "0.5.1",
         "ts-loader": "1.3.0",
-        "typescript": "2.1.4",
+        "typescript": "2.2.2",
         "typings": "2.0.0",
         "webpack": "1.14.0",
         "webpack-dev-server": "1.16.2"
