--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/chartjs": "0.0.30",
     "bootstrap": "3.3.7",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
