--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@types/chartjs": "0.0.30",
     "bootstrap": "3.3.7",
+    "chart.js": "^2.6.0",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
