--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-busy": "^2.0.4",
     "bootstrap": "3.3.7",
     "chart.js": "^2.6.0",
     "copy-webpack-plugin": "^4.0.1",
